welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:31: error: not found: value marque
	marque(c)
        ^FlowerCase:35: error: not found: value marque
	marque(c)
        ^FlowerCase:37: error: not found: value marque
	marque(c)
        ^FlowerCase:39: error: not found: value marque
	marque(Color.yellow)
        ^FlowerCase:42: error: not found: value marque
	marque(c)
        ^